--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,4 +1,8 @@
 * {
-    font-family: Inter, Roboto, sans-serif;
+    /*font-family: Inter, Roboto, sans-serif;*/
     scroll-behavior: smooth;
+}
+
+html {
+    font-size: 16px;
 }
